Added first step for the API with examples
