# controllers/controller_controller.py
@@ -1,0 +1,3 @@
+
+def post_metrology(metrology = None):
+    return 'do some magic!'
